k8s/prod/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-store-deployment
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mini-store
  template:
    metadata:
      labels:
        app: mini-store
    spec:
      containers:
      - name: mini-store
        image: samirbch/mini-store:v19
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: docker-secret   # ← ajouter ici
